# qdrant-fluvio

./: Cargo.toml  Connector.toml  README.md  sample-config.yaml  secrets.txt
src/: config.rs  data-example.json  main.rs  sink.rs
